--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Valentine Quest</title>
-    <link rel="icon" type="image/x-icon" href="./images/headTiff.png">
-    <!-- <link rel="icon" type="image/x-icon" href="./images/headKate.png"> -->
+    <link rel="icon" type="image/x-icon" href="./images/headKate.png">
     <link rel="stylesheet" href="index.styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
